results/SVCOMP/4-shot/log-ExSymExe17-2024_03_18_18_35_04.txt
class Main {
  static int field;

  //@ ensures \result <==> z == x - 0 - 4;
  public boolean test(int x, int z) {
    System.out.println("Testing ExSymExe17");
    int y = 0;
    z = x - y - 4;
    if (z == 0) {
      System.out.println("branch FOO1");
      return false;
    } else System.out.println("branch FOO2");
    if (y == 0) System.out.println("branch BOO1");
    else
      System.out.println("branch BOO2");
    return true;
  }

  //@ ensures \result <==> test(3, 9);
  public static boolean f() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field);
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe17.java:19: error: non-static method test(int,int) cannot be referenced from a static context
  //@ ensures \result <==> test(3, 9);
                           ^
1 error

